--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "react-redux": "^7.2.5",
     "react-scripts": "4.0.2",
     "redux": "^4.1.1",
+    "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
     "sass": "^1.42.1",
     "web-vitals": "^1.0.1"
